--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mirror-background",
+  "name": "react-mirror-background",
   "version": "1.0.0",
   "description": "A simple mirror background library with theme toggle functionality for React",
   "keywords": [
