--- a/package.json
+++ b/package.json
@@ -1,60 +1,28 @@
 {
-  "name": "react-mirror-background",
-  "version": "1.0.0",
-  "description": "A simple mirror background library with theme toggle functionality for React",
-  "keywords": [
-    "react",
-    "typescript",
-    "mirror",
-    "background",
-    "meme"
-  ],
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
+  "name": "my-react-typescript-package",
+  "version": "0.1.0",
+  "description": "Demo page of react-mirror-background",
+  "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --dist-dir docs --public-url ."
+  },
+  "keywords": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tigorthemusichead/react-mirror-background.git"
   },
-  "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "test": "jest --config jestconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint"
-  },
   "author": "Arsenii Ermolaev",
   "license": "MIT",
   "devDependencies": {
-    "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "jest": "^29.7.0",
-    "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "ts-jest": "^29.1.5",
-    "tslib": "^2.6.3",
+    "@types/react-dom": "^18.3.0",
+    "parcel": "^2.12.0",
+    "process": "^0.11.10",
     "typescript": "^5.5.2"
   },
-  "peerDependencies": {
-    "react": ">=16"
-  },
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ]
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-mirror-background": "^1.0.0"
+  }
 }
